fix(style): groups now hidden by default, shown upon toggling

--- a/materials/public/css/scss/components/_collapsible.scss
+++ b/materials/public/css/scss/components/_collapsible.scss
@@ -35,12 +35,12 @@
 
     &__toggle-overflow {
         color: $clr-hyperlink;
-        background-color: inherit;
+        background-color: initial;
         border: unset;
         border-radius: unset;
         border-top: $clr-dark-transparent 1px solid;
         &:hover {
-            background-color: inherit;
+            background-color: $clr-focus-bg;
         }
     }
 
